--- a/shouye.html
+++ b/shouye.html
@@ -356,22 +356,28 @@
 	<footer>
 		<div class="bottom">
 			<ul>
-				<li>
-					<img class="shouy" src="img/20.png" alt="">
-					<span>首页</span>
-				</li>
+				<a href="shouye.html" style="color:#000;">
+					<li>
+						<img class="shouy" src="img/20.png" alt="">
+						<span>首页</span>
+					</li>
+				</a>
 				<li>
 					<img class="faxian" src="img/21.png" alt="">
 					<span>发现</span>
 				</li>
-				<li>
-					<img class="dingdan" src="img/22.png" alt="">
-					<span>订单</span>
-				</li>
-				<li>
-					<img class="wode" src="img/19.png" alt="">
-					<span>我的</span>
-				</li>
+				<a href="dingdanzx.html" style="color:#000;">
+					<li>
+						<img class="dingdan" src="img/22.png" alt="">
+						<span>订单</span>
+					</li>
+				</a>
+				<a href="geren.html" style="color:#000;">
+					<li>
+						<img class="wode" src="img/19.png" alt="">
+						<span>我的</span>
+					</li>
+				</a>
 			</ul>
 		</div>
 	</footer>
