--- a/dianpu.html
+++ b/dianpu.html
@@ -12,9 +12,11 @@
 <body>
 	<header>
 		<ul>
-			<li>
+			<a href="shouye.html">
+				<li>
 				<div class="back iconfont icon-more"></div>
 			</li>
+			</a>
 			<li>
 				<div class="search iconfont icon-sousuo"></div>
 				<div class="share iconfont icon-fenxiang"></div>
