--- a/list.html
+++ b/list.html
@@ -8,6 +8,11 @@
 	<link rel="stylesheet" href="css/rem.css">
 	<link rel="stylesheet" href="css/list.css">
 </head>
+<style>
+	*{
+		-webkit-tap-highlight-color: transparent;
+	}
+</style>
 <body>
 	<header>
 		<ul>
