--- a/shouye.html
+++ b/shouye.html
@@ -9,6 +9,12 @@
 	<link rel="stylesheet" href="css/swiper-4.3.5.min.css">
 	<link rel="stylesheet" href="css/shouye.css">
 </head>
+
+<style>
+	*{
+		-webkit-tap-highlight-color: transparent;
+	}
+</style>
 <body>
 	<header>
 		<div class="first">
